[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "process-gpt-agent-utils"
version = "0.2.7"
description = "ProcessGPT Agent Utilities - 도구 로더, 지식 관리, 이벤트 로깅, 데이터베이스 유틸리티"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agent", "processgpt", "tools", "knowledge", "logging", "database", "crewai", "mcp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "supabase>=2.0.0",
  "python-dotenv>=1.0.0",
  "mem0ai>=0.1.108",
  "typing-extensions>=4.0.0; python_version < \"3.11\"",
  "crewai>=0.152.0,<=0.175.0",
  "crewai-tools[mcp]>=0.43.0",
  "mcp>=1.6.0",
  "pydantic>=2.0.0",
  "requests>=2.25.0",
  "pillow>=10.4.0",    
  "anyio>=3.0.0",
  "a2a-sdk>=0.3.0",
  "httpx>=0.24.0",
  "vecs>=0.4.5",
]

[project.urls]
Homepage = "https://github.com/your-org/process-gpt-agent-utils"
Issues = "https://github.com/your-org/process-gpt-agent-utils/issues"
Repository = "https://github.com/your-org/process-gpt-agent-utils"
Documentation = "https://github.com/your-org/process-gpt-agent-utils#readme"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "black>=22.0.0",
  "isort>=5.10.0",
  "mypy>=1.0.0",
  "flake8>=5.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["processgpt_agent_utils*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
